--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,18 +18,18 @@
 }
 
 @font-face {
-  font-family: GelicaSemiBold;
-  src: url(/fonts/GelicaExtraLight.ttf) format("truetype");
+  font-family: "GelicaSemiBold";
+  src: url("/fonts/GelicaExtraLight.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: GelicaRegular;
-  src: url(/fonts/GelicaRegular.ttf) format("truetype");
+  font-family: "GelicaRegular";
+  src: url("/fonts/GelicaRegular.ttf") format("truetype");
 }
 
 @font-face{
-  font-family: GelicaExtraLight;
-  src: url(/fonts/GelicaExtraLight.ttf) format("truetype");
+  font-family: "GelicaExtraLight";
+  src: url("/fonts/GelicaExtraLight.ttf") format("truetype");
 }
 
 a {
@@ -44,7 +44,7 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  font-family: GelicaExtraLight;
+  font-family: "GelicaExtraLight";
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
@@ -52,7 +52,7 @@ body {
 
 h1 {
   font-size: 3.2em;
-  font-family: GelicaSemiBold;
+  font-family: "GelicaSemiBold";
   line-height: 1.1;
 
 }
