--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,11 +9,13 @@
   -moz-osx-font-smoothing: grayscale;
   --dark-purple: #1F0322;
   --light-purple:#AA7DCE;
+  --baby-purple:#ba97c5;
   --light-pink:#F4D7E3;
-  --m-pink:#F4A5AE;
+  --m-pink:#e99fac;
   --dark-pink:#A8577E;
 
-  background-color: var(--light-purple);
+  background-color: var(--baby-purple);
+  background-image: linear-gradient(135deg, var(--light-purple) 0%, var(--light-pink) 100%);
   color: white;
 }
 
@@ -30,6 +32,11 @@
 @font-face{
   font-family: "GelicaExtraLight";
   src: url("/fonts/GelicaExtraLight.ttf") format("truetype");
+}
+
+@font-face{
+  font-family: "GelicaBlack";
+  src: url("/fonts/GelicaBlack.ttf") format("truetype");
 }
 
 a {
@@ -52,7 +59,7 @@ body {
 
 h1 {
   font-size: 3.2em;
-  font-family: "GelicaSemiBold";
+  font-family: "GelicaBlack";
   line-height: 1.1;
 
 }
@@ -68,23 +75,12 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+
+.page{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: scroll;
 }
