fixed the little guy

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -18,3 +18,12 @@ nav a {
     text-decoration: none;
     margin-right: 15px;
 }
+
+.home-page-embre{
+    float: right;
+    justify-content: right;
+    position: absolute;
+    bottom:0;
+    left:-50px;
+    
+}
