homepage updated, need to add references

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,5 +1,5 @@
 nav {
-    background: #3B429F;
+    background: #1F0322;
     padding: 10px;
     width: 100%;
     top:0;
@@ -40,3 +40,4 @@ nav a {
     left:-50px;
     
 }
+
