--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -55,13 +55,33 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  overflow-y: auto;
 }
 
 h1 {
-  font-size: 3.2em;
+  background-color: #1F0322;
+  padding: 6vh 6vh; /* Add padding around the text */
+  border-radius: 5vh; /* Optional: Rounded corners */
+  display: inline-block;
+  font-size: 5em;
   font-family: "GelicaBlack";
-  line-height: 1.1;
+  line-height: .5;
 
+}
+h2 {
+  color: #1f0322;
+  font-size: 2.4em;
+  font-family: "GelicaBold";
+  place-items: center;
+  max-width: 1000pxs;
+}
+
+.home-page-text{
+  color: #1F0322;
+  padding: 30 px;
+  font-family: "GelicaRegular";
+  font-size: 1.75em;
+  max-width: 300 px;
 }
 
 button {
