--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -63,7 +63,7 @@ h1 {
   padding: 6vh 6vh; /* Add padding around the text */
   border-radius: 5vh; /* Optional: Rounded corners */
   display: inline-block;
-  font-size: 5em;
+  font-size: 3em;
   font-family: "GelicaBlack";
   line-height: .5;
 
@@ -92,7 +92,12 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: var(--dark-purple);
+  background-color: var(--light-purple);
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  margin-top: 20%;
+  bottom: 0;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -104,4 +109,17 @@ button {
   align-items: center;
   justify-content: center;
   overflow: auto;
+}
+
+.rs-anim-fade{
+  height: 30vh;
+}
+
+.fade-in{
+  opacity: 1;
+}
+
+.fade-out{
+  opacity: 0;
+  pointer-events: none;
 }
