--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -33,12 +33,10 @@
   }
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.EmbreChat{
+  position:absolute;
+  left:0;
+  transform: translate(-50%, 50%);
 }
 
 path {
