--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -63,24 +63,29 @@ h1 {
   padding: 6vh 6vh; /* Add padding around the text */
   border-radius: 5vh; /* Optional: Rounded corners */
   display: inline-block;
-  font-size: 3em;
+  font-size: 2em;
   font-family: "GelicaBlack";
   line-height: 1;
 
 }
 h2 {
   color: #1f0322;
-  font-size: 2.4em;
+  font-size: 1.4em;
   font-family: "GelicaBold";
   place-items: center;
   max-width: 80vw;
+}
+
+h3{
+  color: var(--dark-purple);
+
 }
 
 .home-page-text{
   color: #1F0322;
   padding: 30 px;
   font-family: "GelicaRegular";
-  font-size: 1.75em;
+  font-size: 1.25em;
   max-width: 60vw;
 }
 
