--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -108,9 +108,27 @@ path:hover{
 .refrences{
   display: flex;
   width: 33vw;
-  height: 20vh;
+  height: 15vh;
   background-color: aliceblue;
   overflow: scroll;
   flex-direction: column;
   border-radius: 10px;
+}
+
+.hello {
+  animation-name: hello;
+  animation-duration: 1.3s;
+  animation-timing-function: ease;
+  animation-iteration-count: infinite;
+  position: relative;
+  top: 0;
+  left: 0;
+}
+@keyframes hello {
+  0% {
+    top: 0px;
+  }
+  100% {
+    top: -15px;
+  }
 }
