--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -48,44 +48,11 @@ a:hover {
   color: var(--light-pink);
 }
 
-body {
-  margin: 0;
-  display: flex;
-  font-family: "GelicaExtraLight";
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-  overflow-y: auto;
-}
-
-h1 {
-  background-color: #1F0322;
-  padding: 6vh 6vh; /* Add padding around the text */
-  border-radius: 5vh; /* Optional: Rounded corners */
-  display: inline-block;
-  font-size: 2em;
-  font-family: "GelicaBlack";
-  line-height: 1;
-
-}
-h2 {
-  color: #1f0322;
-  font-size: 1.4em;
-  font-family: "GelicaBold";
-  place-items: center;
-  max-width: 80vw;
-}
-
-h3{
-  color: var(--dark-purple);
-
-}
-
 .home-page-text{
   color: #1F0322;
-  padding: 30 px;
+  padding: .05em;
   font-family: "GelicaRegular";
-  font-size: 1.25em;
+  font-size: 1.2em;
   max-width: 60vw;
 }
 
@@ -127,3 +94,9 @@ button {
   opacity: 0;
   pointer-events: none;
 }
+
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
